# host-sdl

./: README.md
CMake/: CMakeLists.txt
source/: MOAIVideoModesMgr.cpp  SDLHost.cpp
